--- a/workflow_db/container/migration/Dockerfile
+++ b/workflow_db/container/migration/Dockerfile
@@ -1,6 +1,14 @@
 FROM centos:centos7
 
-RUN yum -y install ruby ruby-devel make gcc mysql-devel gcc-c++ mysql && gem install bundler
+RUN yum -y install centos-release-scl
+
+RUN yum -y install rh-ruby23 rh-ruby23-ruby-devel
+
+SHELL [ "/usr/bin/scl", "enable", "rh-ruby23" ]
+
+RUN yum -y install make gcc mysql-devel gcc-c++ mysql
+
+RUN gem install bundler
 
 RUN mkdir -p /apps
 
