--- a/workflow_ui/pom.xml
+++ b/workflow_ui/pom.xml
@@ -12,7 +12,6 @@
   <version>1.0-SNAPSHOT</version>
 
   <properties>
-    <skip.assembly>false</skip.assembly>
     <skip.db>false</skip.db>
   </properties>
 
@@ -161,6 +160,64 @@
     </dependency>
 
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <version>3.1.0</version>
+
+        <configuration>
+          <skipAssembly>${skip.assembly}</skipAssembly>
+          <tarLongFileMode>posix</tarLongFileMode>
+        </configuration>
+
+        <executions>
+
+          <execution>
+            <id>deploy</id>
+            <phase>package</phase>
+            <goals>
+              <goal>single</goal>
+            </goals>
+            <configuration>
+              <finalName>${project.artifactId}.job</finalName>
+              <appendAssemblyId>false</appendAssemblyId>
+              <descriptorRefs>
+                <descriptorRef>workflow-uberjar</descriptorRef>
+              </descriptorRefs>
+              <attach>false</attach>
+            </configuration>
+          </execution>
+
+          <execution>
+            <id>deploy-bundle</id>
+            <phase>package</phase>
+            <goals>
+              <goal>single</goal>
+            </goals>
+            <configuration>
+              <descriptorRefs>
+                <descriptorRef>workflow-deploy</descriptorRef>
+              </descriptorRefs>
+              <attach>true</attach>
+            </configuration>
+          </execution>
+
+        </executions>
+
+        <dependencies>
+          <dependency>
+            <groupId>com.liveramp.workflow2</groupId>
+            <artifactId>workflow_assemblies</artifactId>
+            <version>1.0-SNAPSHOT</version>
+          </dependency>
+        </dependencies>
+
+      </plugin>
+
+    </plugins>
+  </build>
 
   <repositories>
     <repository>
